# exousia

./: .containerignore  .coverage  .dockerignore  .dotfiles-sha  .env.example  .fedora-version  .gitignore  .gitleaks.toml  .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE_GEMINI_CODEX.md  Containerfile  Containerfile.api  Containerfile.atomic  Containerfile.bootc  Containerfile.orig  Containerfile.pod  Containerfile.rke2  Containerfile.worker  DISTROS.md  Dockerfile.api  Dockerfile.pod  Dockerfile.worker  Makefile  README.md  SECURITY.md  STATUS.md  adnyeus.yml  codecov.yml  containers-auth.conf  docker-compose.blazingmq.yml  exousia.yml  justfile  podman-compose.blazingmq.yml  podman-compose.yml  pyproject.toml
.codex/: ADMIN_TASKS.md
.forgejo/workflows/: README.md  askin.yml  bambietta.yml  gremmy.yml  grimmjow.yml  harribel.yml  nelliel.yml  pernida.yml  starrk.yml  szayelaporro.yml  ulquiorra.yml
.github/codeql/: codeql-config.yml
.github/workflows/: README.md  aizen.yml  anat.yml  build.yaml  build.yml  byakuya.yml  deploy.yaml  deploy.yaml.orig  el.yml  eshmun.yml  gin.yml  hikifune.yml  hiyori.yml  kaname.yml  kon.yml  kothar.yml  kyoraku.yml  mayuri.yml  nemu.yml  release-manual.yml  release.yml  resheph.yml  sealed.yml  uhin.yml  ulquiorra.yml  unohana.yml  urahara.yml  yoruichi.yml
ansible/: README.md  site.yml
ansible/inventory/: hosts.yml
api/: Containerfile  README.md  __init__.py  alembic.ini  auth.py  config.py  database.py  main.py  middleware.py  models.py  queue.py  requirements.txt  webhook_trigger.py
api/migrations/: env.py
api/routers/: build.py  config.py  health.py
api/services/: github_service.py  transpiler_service.py  yaml_selector_service.py
api/tests/: __init__.py  conftest.py  test_api_integration.py  test_atomic_images.py  test_bootc_images.py  test_build.py  test_config.py  test_desktop_environments.py  test_event_sourcing.py  test_health.py  test_queue_deduplication.py  test_resolve_build_config.py  test_security.py
api/workers/: build_worker.py
blazingmq/config/: broker.json
custom-configs/: 61-bindings.conf  95-theme.conf
custom-configs/greetd/: config.toml
custom-configs/sway/: config  environment  start-sway  sway.desktop
custom-configs/swaylock/: config
custom-configs/tmpfiles.d/: libvirt-dnsmasq.conf
custom-configs/waybar/: config
custom-pkgs/: packages.add  packages.desktop  packages.hypr  packages.remove  packages.sway
custom-repos/: k8s.repo  kernel-mainline.repo  kubernetes.repo  nwg-shell.repo  swaylock-effects.repo
custom-scripts/: config-authselect  dracut-rebuild  ensure-sway-session  fedora-version-switcher  generate-readme  install-essential-flatpaks  install-flatpak-runtimes  install-flatpaks-buildtime  rke2-configure-firewall  rke2-kubeconfig.sh  rke2-status.sh  setup-plymouth-theme  setup-sddm-themes  verify-flatpak-installation  virt-group-setup
custom-tests/: README.md  image_content.bats  overlay_content.bats
docs/: APPLICATION_PACKAGES.md  BLAZINGMQ_SETUP.md  BOOTC_IMAGE_BUILDER.md  BOOTC_UPGRADE.md  CHEZMOI_INTEGRATION.md  FLATPAK_VERIFICATION.md  IMMUTABILITY_IDEMPOTENCY.md  KERNEL_OPTIONS.md  README.md  RKE2_BOOTC_SETUP.md  RKE2_INTEGRATION.md  TESTING.md  WEBHOOK_API.md  ZFS_BOOTC.md  ansible.md  beszel-monitoring.md  bootc-image-builder.md  bootc-upgrade.md  chezmoi-integration.md  cve-remediation.md  distros.md  fedora-bootc-migration-plan.md  flatpak-verification.md  forgejo-issues.md  forgejo-runner.md  k3s.md  kernel-options.md  local-build-pipeline.md  logging-architecture.md  luks-fido2.md  matrix-builds.md  modules.md  overlay-system.md  package-loader-cli.md  package-management-and-container-builds.md  paperless-integration.md  plan-multi-distro.md  plan-temporal-orchestration.md  quadlet-services.md  quadlet-syntax.md  (+10 more)
k8s/: exousia-deployment.yaml
overlays/: README.md
sealed/: Containerfile  Containerfile.sbctl  Containerfile.systemd-boot  Containerfile.tools  Containerfile.uki-addon  justfile
sysusers/: atomic.conf  bootc.conf
tests/: README.md  _helper.bash  image_content.bats  overlay_content.bats
tools/: README.md  audit-configs.sh  check_utils.py  constants.py  copr_manager.py  distro_mapper.py  dry_check.py  generate-readme.py  konso_check.py  package_dependency_checker.py  package_loader.py  resolve_build_config.py  rke2-vm-manager.sh  rke2_ops.py  setup-rke2-registry.sh  sync_docs_to_paperless.py  test_build_zfs_kmod.py  test_distro_mapper.py  test_dry_check.py  test_generator_cli.py  test_generator_processors.py  test_konso_check.py  test_package_dependency_checker.py  test_package_loader.py  test_package_logic_deep_dive.py  test_resolve_build_config.py  test_rke2_firewall_helper.py  test_sync_docs_to_paperless.py  test_tool_edge_cases.py  test_validator.py  test_yaml_to_containerfile.py  validate_installed_packages.py  webhook_trigger.py  yaml-to-containerfile.py  yaml_selector_service.py
workers/temporal/: Containerfile  README.md  pyproject.toml
workers/temporal/src/: register_schedules.py  worker.py
workers/temporal/src/activities/: __init__.py  agent.py  alert.py  backup.py  container_lifecycle.py  cve_check.py  health.py  incident.py  llm.py  miniflux.py  observe.py  operations.py  paperless.py  security.py  vikunja.py
workers/temporal/src/clients/: __init__.py  forgejo.py  podman.py  systemd.py  vikunja.py
workers/temporal/src/workflows/: __init__.py  anomaly_detection.py  autonomous_agent.py  backup.py  base_image_mirror.py  changelog.py  container_lifecycle.py  cve_check.py  deps_update.py  doc_sync.py  dr_drill.py  health.py  health_report.py  incident.py  journal_knowledge.py  llm_pipeline.py  miniflux_digest.py  pr_review.py  resource_audit.py  security_posture.py  security_scan.py  ticket_sync.py
workers/temporal/tests/: test_activities.py  test_clients.py  test_workflows.py
yaml-definitions/: README.md  arch-bootc.yml  bootc.yml  debian-bootc.yml  fedora-kinoite.yml  fedora-silverblue.yml  opensuse-bootc.yml  rke2-bootc.yml  sway-atomic.yml  sway-bootc-v2.yml  sway-bootc.yml  sway.yml  ubuntu-bootc.yml
(+171 files in other folders)
